--- a/Test02/Views/KeToan/CreateCongno.cshtml
+++ b/Test02/Views/KeToan/CreateCongno.cshtml
@@ -2,64 +2,54 @@
 
 @{
     ViewBag.Title = "CreateCongno";
-    Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
+    Layout = "/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
 }
-<h2>PHIẾU THU CÔNG NỢ</h2>
+<div class="tile">
+    <div class="tile-body">
+        <h3 style="text-align:center">PHIẾU CÔNG NỢ</h3>
+        <form style="text-align:center">
+            <label for="date">Ngày:</label>
+            <input type="date" id="clock" class="date" name="ngay"><br>
+            <label for="number">Mã số:</label>
+            <input type="number" id="number" name="maso"> <br>
+        </form>
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaCongNo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MaCongNo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaCongNo, "", new { @class = "text-danger" })
+        <form class="row">
+            <div class="form-group col-md-12">
+                <label class="control-label">Tên đại lý tiếp nhận: </label>
+                <input class="form-control" type="text">
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaDL, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MaDL, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaDL, "", new { @class = "text-danger" })
+            <div class="form-group col-md-12">
+                <label class="control-label">Loại đại lý: </label>
+                <input class="form-control" type="text" required>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaDH, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MaDH, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaDH, "", new { @class = "text-danger" })
+            <div class="form-group col-md-12">
+                <label class="control-label">Địa chỉ:</label>
+                <input class="form-control" type="text" required>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TienNo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TienNo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TienNo, "", new { @class = "text-danger" })
+            <div class="form-group col-md-12">
+                <label class="control-label">Tên người chịu trách nhiệm:</label>
+                <input class="form-control" type="text" required>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.HanTra, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.HanTra, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.HanTra, "", new { @class = "text-danger" })
+            <div class="form-group col-md-12">
+                @*//  @Html.LabelFor(model => model.TienNo, htmlAttributes: new { @class = "control-label col-md-2" })*@
+                <label class="control-label">Tiền nợ:</label>
+                
+                    @Html.EditorFor(model => model.TienNo, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.TienNo, "", new { @class = "text-danger" })
+               
             </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="form-group col-md-12">
+                <label class="control-label">Kèm theo:</label>
+                <input class="form-control" type="text" required>
             </div>
-        </div>
+         
+        </form>
+        <button class="btn btn-save" type="button">Lưu phiếu</button>
+        <a class="btn btn-cancel" href="XuatKho">Hủy bỏ</a>
     </div>
-}
+</div>
+
 
 <div>
     @Html.ActionLink("Back to List", "QLCongno")
