--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -69,7 +69,7 @@
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.cn" href="~/KeToan/QLCongno">
-                    <i class='app-menu__icon bx bx-user-voice'></i><span class="app-menu__label">Quản lý Công nợ</span>
+                    <i class='app-menu__icon bx bx-dollar'></i><span class="app-menu__label">Quản lý Công nợ</span>
                 </a>
             </li>
             <li>
@@ -77,11 +77,11 @@
                     <i class='app-menu__icon bx bx-purchase-tag-alt'></i><span class="app-menu__label">Doanh thu</span>
                 </a>
             </li>
-            <li>
+            @*<li>
                 <a class="app-menu__item @ViewBag.ln" href="~/KeToan/LoiNhuan">
                     <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Lợi Nhuận</span>
                 </a>
-            </li>
+            </li>*@
 
         </ul>
     </aside>
