--- a/Test02/Views/KeToan/QLHoaDon.cshtml
+++ b/Test02/Views/KeToan/QLHoaDon.cshtml
@@ -6,7 +6,6 @@
     ViewBag.nd = "Danh sách hóa đơn";
 }
 
-<link rel="stylesheet" type="text/css" href="~/Content/QLHoadon.css">
 
 <div class="row">
     <div class="col-md-12">
@@ -14,20 +13,28 @@
             <div class="tile-body">
 
                 <div class="row element-button">
-                    <div class="col-sm-3">
-                            <button onclick="myFunction()" class="dropbtn">Thêm hóa đơn</button>
-                            <div id="myDropdown" class="dropdown-content">
-                                <a href="#GTGT">Hóa đơn GTGT</a>
-                                <a href="#Banhang">Hóa đơn bán hàng</a>
-                                <a href="#HDKho">Hóa đơn kho</a>
-                            
-                        </div>
-                    </div>
-
                     <div class="col-sm-2">
-                        <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="#"><i class="fas fa-copy"></i> Làm mới danh sách</a>
+
+                        <a class="btn btn-add btn-sm" href="~/KeToan/createHDGTGT" title="Thêm">
+                            <i class="fas fa-plus"></i>
+                            Tạo hóa đơn GTGT
+                        </a>
+                    </div>
+                    <div class="col-sm-2">
+
+                        <a class="btn btn-add btn-sm" href="~/KeToan/createHDBH" title="Thêm">
+                            <i class="fas fa-plus"></i>
+                            Tạo hóa đơn xuất hàng tới đại lý
+                        </a>
+                    </div>
+                   
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
                     </div>
 
+                          
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
@@ -61,13 +68,15 @@
                                         <td>Tấn Nhã</td>
                                         <td>12.000.000</td>
                                         <td></td>
-                                        <td>
-                                            <a href="#" class="btn btn-primary btn-sm edit">
-                                                Chỉnh sửa
-                                            </a>
-                                            <a href="#" class="btn btn-primary btn-sm deleted">
-                                                Xóa hóa đơn
-                                            </a>
+                                        <td class="table-td-center">
+                                            <button class="btn btn-primary btn-sm trash" type="button" title="Xóa"
+                                                    onclick="myFunction(this)">
+                                                <i class="fas fa-trash-alt"></i>
+                                            </button>
+                                            <button class="btn btn-primary btn-sm edit" type="button" title="Sửa" id="show-emp"
+                                                    data-toggle="modal" data-target="#ModalUP">
+                                                <i class="fas fa-edit"></i>
+                                            </button>
                                         </td>
 
                                     </tr>
@@ -84,29 +93,38 @@
     </div>
 </div>
 
-
-
 <script>
-    /* When the user clicks on the button,
-    toggle between hiding and showing the dropdown content */
-    function myFunction() {
-        document.getElementById("myDropdown").classList.toggle("show");
+    function deleteRow(r) {
+        var i = r.parentNode.parentNode.rowIndex;
+        document.getElementById("myTable").deleteRow(i);
     }
+    jQuery(function () {
+        jQuery(".trash").click(function () {
+            swal({
+                title: "Cảnh báo",
 
-    // Close the dropdown if the user clicks outside of it
-    window.onclick = function (event) {
-        if (!event.target.matches('.dropbtn')) {
-            var dropdowns = document.getElementsByClassName("dropdown-content");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-                var openDropdown = dropdowns[i];
-                if (openDropdown.classList.contains('show')) {
-                    openDropdown.classList.remove('show');
-                }
-            }
-        }
-    }
-</script>
+                text: "Bạn có chắc chắn là muốn xóa sản phẩm?",
+                buttons: ["Hủy bỏ", "Đồng ý"],
+            })
+                .then((willDelete) => {
+                    if (willDelete) {
+                        swal("Đã xóa thành công.!", {
+
+                        });
+                    }
+                });
+        });
+    });
+    oTable = $('#sampleTable').dataTable();
+    $('#all').click(function (e) {
+        $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
+        e.stopImmediatePropagation();
+    });
+
+   
+
+
+
 
 
 
