--- a/Test02/Views/KinhDoanh/QuanLyHD.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyHD.cshtml
@@ -21,8 +21,13 @@
                     <div class="col-sm-2">
                         <a class="btn btn-delete btn-sm print-file js-textareacopybtn" type="button" title="Sao chép" href="~/KinhDoanh/QuanLyHD"><i class="fas fa-copy"></i> Làm mới danh sách</a>
                     </div>
-
+                    <div class="col-sm-2">
+                        <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+                            <i class="fas fa-print"></i> In dữ liệu
+                        </a>
+                    </div>
                 </div>
+
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
 
@@ -95,3 +100,15 @@
         </div>
     </div>
 </div>
+<script>
+    //In dữ liệu
+    var myApp = new function () {
+        this.printTable = function () {
+            var tab = document.getElementById('sampleTable');
+            var win = window.open('', '', 'height=700,width=700');
+            win.document.write(tab.outerHTML);
+            win.document.close();
+            win.print();
+        }
+    }
+</script>
