--- a/Test02/Views/LoginUser/Login.cshtml
+++ b/Test02/Views/LoginUser/Login.cshtml
@@ -31,7 +31,7 @@
         <div class="container-login100">
             <div class="wrap-login100">
                 <div class="login100-pic js-tilt" data-tilt>
-                    <img src="~/Content/images/team.jpg" alt="IMG">
+                    <img src="~/Content/images/backgroungteam.png" alt="IMG">
                 </div>
                 <!--=====TIÊU ĐỀ======-->
                 @using (Html.BeginForm("Login", "LoginUser", FormMethod.Post))
@@ -72,8 +72,8 @@
                 }
                 <!--=====FOOTER======-->
                 <div class="text-center p-t-70 txt2">
-                    Phần mềm quản lý bán hàng <i class="far fa-copyright" aria-hidden="true"></i>
-                    <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="txt2" href="https://www.facebook.com/nha.truong.3110567/"> Code bởi nhỏm Quản Lý các đại lý (Nhóm 06) </a>
+                    Phần mềm quản lý đại lý <i class="far fa-copyright" aria-hidden="true"></i>
+                    <script type="text/javascript">document.write(new Date().getFullYear());</script> <a class="txt2" href="https://www.facebook.com/nha.truong.3110567/"> Code bởi nhỏm G02_Quản Lý các đại lý (CNPM_Huflit) </a>
                 </div>
             </div>
         </div>
