--- a/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
+++ b/Test02/Views/PhongKho/Layout/_LayoutPage1.cshtml
@@ -43,7 +43,7 @@
     <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
         <div class="app-sidebar__user">
-            <img class="app-sidebar__user-avatar" src="~/Content/Img/135017829_1026004181228801_2637032699560275_n.jpg" width="50px"
+            <img class="app-sidebar__user-avatar" src="~/Content/Img/DiemKhang.jpg" width="50px"
                  alt="User Image">
             <div>
                 <p class="app-sidebar__user-name"><b>@{
