--- a/Test02/Views/PhongKho/QuanLyDL.cshtml
+++ b/Test02/Views/PhongKho/QuanLyDL.cshtml
@@ -61,7 +61,7 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/coca.png" alt=""></td>
                             <td>Coca Cola</td>
                             <td>Lon</td>
                             <td>3249</td>
@@ -82,8 +82,8 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/stingVang.jpg" alt=""></td>
+                            <td>String vàng</td>
                             <td>Lon</td>
                             <td>3249</td>
                             <td>22/10/2021</td>
@@ -103,8 +103,8 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/sting.jpg" alt=""></td>
+                            <td>Sting </td>
                             <td>Lon</td>
                             <td>3249</td>
                             <td>22/10/2021</td>
@@ -124,8 +124,8 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/pepsi.jpg" alt=""></td>
+                            <td>Pepsi</td>
                             <td>Lon</td>
                             <td>3249</td>
                             <td>22/10/2021</td>
@@ -145,8 +145,8 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/cocalight.jpg" alt=""></td>
+                            <td>Coca Light</td>
                             <td>Lon</td>
                             <td>3249</td>
                             <td>22/10/2021</td>
@@ -166,8 +166,8 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/7up.jpg" alt=""></td>
+                            <td>7 Up</td>
                             <td>Lon</td>
                             <td>3249</td>
                             <td>22/10/2021</td>
@@ -187,8 +187,8 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/pepsi0calo.jpg" alt=""></td>
+                            <td>Pepsi không calo </td>
                             <td>Lon</td>
                             <td>3249</td>
                             <td>22/10/2021</td>
