--- a/Test02/Views/PhongKho/TonKho.cshtml
+++ b/Test02/Views/PhongKho/TonKho.cshtml
@@ -35,10 +35,41 @@
                         </tr>
                     </thead>
                     <tbody>
+
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/pepsi.jpg" alt=""></td>
+                            <td>Pepsi</td>
+                            <td>Lon</td>
+                            <td>3249</td>
+                            <td>22/10/2021</td>
+                            <td>22/10/2025</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>#CD12837</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/pepsi.jpg" alt=""></td>
+                            <td>Pepsi</td>
+                            <td>Lon</td>
+                            <td>3249</td>
+                            <td>22/10/2021</td>
+                            <td>22/10/2025</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>#CD12837</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/pepsi.jpg" alt=""></td>
+                            <td>Pepsi</td>
+                            <td>Lon</td>
+                            <td>3249</td>
+                            <td>22/10/2021</td>
+                            <td>22/10/2025</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>#CD12837</td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/coca.png" alt=""></td>
                             <td>Coca Cola</td>
                             <td>Lon</td>
                             <td>3249</td>
@@ -48,7 +79,7 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/coca.png" alt=""></td>
                             <td>Coca Cola</td>
                             <td>Lon</td>
                             <td>3249</td>
@@ -58,47 +89,7 @@
                         <tr>
                             <td>1</td>
                             <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
-                            <td>Lon</td>
-                            <td>3249</td>
-                            <td>22/10/2021</td>
-                            <td>22/10/2025</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
-                            <td>Lon</td>
-                            <td>3249</td>
-                            <td>22/10/2021</td>
-                            <td>22/10/2025</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
-                            <td>Lon</td>
-                            <td>3249</td>
-                            <td>22/10/2021</td>
-                            <td>22/10/2025</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
-                            <td>Coca Cola</td>
-                            <td>Lon</td>
-                            <td>3249</td>
-                            <td>22/10/2021</td>
-                            <td>22/10/2025</td>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>#CD12837</td>
-                            <td><img class="img-card-person" src="/img-anhthe/1.jpg" alt=""></td>
+                            <td><img class="img-card-person" src="~/Content/Img/SanPham/coca.png" alt=""></td>
                             <td>Coca Cola</td>
                             <td>Lon</td>
                             <td>3249</td>
