--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -38,7 +38,7 @@
     <div class="app-sidebar__overlay" data-toggle="sidebar"></div>
     <aside class="app-sidebar">
         <div class="app-sidebar__user">
-            <img class="app-sidebar__user-avatar" src="~/Content/Img/135017829_1026004181228801_2637032699560275_n.jpg" width="50px"
+            <img class="app-sidebar__user-avatar" src="~/Content/Img/account.png" width="50px"
                  alt="User Image">
             <div>
                 
