--- a/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDL.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "ChinhSuaDL";
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
+    ViewBag.nd = "Chỉnh sửa đại lý";
 }
 
 <h2>ChinhSuaDL</h2>
