--- a/Test02/Views/KinhDoanh/ThemDH.cshtml
+++ b/Test02/Views/KinhDoanh/ThemDH.cshtml
@@ -100,7 +100,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Thêm đơn hàng" class="btn btn-default" />
             </div>
         </div>
     </div>
